Creado mediante Colaboratory

--- a/Ejercicio_for.ipynb
+++ b/Ejercicio_for.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoh02ncdsxLGnz9jJJJS5l",
+      "authorship_tag": "ABX9TyNpUgAwIqvbGmGEBComxKKm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -224,7 +224,7 @@
         "for i in range(7,19,4):\n",
         "  print(i)\n",
         "\n",
-        "print(\"Convierte rango en lista a, y la mustra\")\n",
+        "print(\"Convierte rango en lista a, y la muestra\")\n",
         "a = list(range(1000))\n",
         "print(a)\n"
       ],
@@ -239,13 +239,99 @@
       "source": [
         "Ejercicios\n",
         "\n",
-        "  1.Dada la siguinte lista de numeros,[20,21,30,31,50,51,201]mostrar en pantalla solo los que NO terminan en 1.\n",
+        "  1.Dada la siguinte lista de numeros,[20,21,30,41,50,51,201]mostrar en pantalla solo los que NO terminan en 1. \n",
+        "\n",
         "  2.Mostrar 1000 veces la palabra \"Programacion\".\n",
-        "  3.Del conjunnto de cadenas[\"E\",\"F\",\"M\",\"A\"]que corresponda a las iniciales de los primeros cuatro meses del año, mostrar el nombre completo de dichos mese."
+        "\n",
+        "  3.Del conjunnto de cadenas[\"E\",\"F\",\"M\",\"A\"]que corresponda a las iniciales de los primeros cuatro meses del año, mostrar el nombre completo de dichos mese.\n",
+        "\n",
+        "  4.Leer un texto y determina cuántas veces dicho texto contiene cada una de las vocales en minusculasy/o mayuscula."
       ],
       "metadata": {
         "id": "qcyz_UI-G4o_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# EJERCICIO 1:\n",
+        "\n",
+        "numeros = [20,21,30,41,50,51,201]\n",
+        "for numero in numeros:\n",
+        "  if numero % 10 != 1:\n",
+        "    print(numero)\n"
+      ],
+      "metadata": {
+        "id": "5Js7kUq6Mz4E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# EJERCICIO 2:\n",
+        "\n",
+        "for i in range(1,1001):\n",
+        "  print(f\"{i} Programacion\")"
+      ],
+      "metadata": {
+        "id": "zbA7mGmAPGGo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# EJERCICIO 3:\n",
+        "\n",
+        "list = [\"E\",\"F\",\"M\",\"A\"]\n",
+        "meses_año = [\"Enero\",\"Febrero\",\"Marzo\",\"Abril\"]\n",
+        "E = \"Enero\"\n",
+        "F = \"Febrero\"\n",
+        "M = \"Marzo\"\n",
+        "A = \"Abril\"\n",
+        "for i in meses_año:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Wc4vQeVjPthE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# EJERCICIO 4:\n",
+        "\n",
+        "texto = \"Mi nombre es Marcos y tengo 6 años. En mi casa vivimos mis papás, mis dos hermanos y mi tortuga Roger.\"\n",
+        "vocales = \"aeiouAEIOU\"\n",
+        "contador = 0\n",
+        "\n",
+        "for letra in texto:\n",
+        "  if letra in vocales:\n",
+        "    contador += 1\n",
+        "print(\"el texto contiene\", contador, \"vocales\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NfX3oqY_TZ0F",
+        "outputId": "ec82ff7e-e092-4196-c973-5d9cd3aeb1d5"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "el texto contiene 30 vocales\n"
+          ]
+        }
+      ]
     }
   ]
 }
